--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,18 +1,42 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="jumbotron jumbotron-fluid text-center">
-  <h1 class="cover-heading mb-3">A personal activity heatmap</h1>
-  <p class="lead mb-4">Hi, my name is Rafael and I do some sports as a hobby. Mostly &#127939 and &#128692 in summer, and &#127938 in winter.</p>
-  <hr class="my-hr">
-  <p class="lead text-muted">I use this small website to host my <span style="color: #fff">personal activity heatmap</span>, based on my Strava data. 
-    I like to code, so naturally I prefer to make this myself rather than paying for <span style="color: #fff">Strava's premium feature</span> &#128513
-  </p>
-  <p class="lead">
-    <a href="{{ url_for('heatmap.heatmap') }}" class="btn btn-primary">View map</a>
-    <a href="https://github.com/rafaelschlatter/strava-heatmap" class="btn btn-outline-light"><span class="fa fa-github"></span> View source</a>
-  </p>
+<div class="jumbotron jumbotron-fluid">
+  <fiv class="row">
+    <div class="col-6 mx-auto col-md-4 text-center order-md-2">
+      <svg class="bi bi-map" width="7em" height="7em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+      <path fill-rule="evenodd" d="M15.817.613A.5.5 0 0116 1v13a.5.5 0 01-.402.49l-5 1a.502.502 0 01-.196 0L5.5 14.51l-4.902.98A.5.5 0 010 15V2a.5.5 0 01.402-.49l5-1a.5.5 0 01.196 0l4.902.98 4.902-.98a.5.5 0 01.415.103zM10 2.41l-4-.8v11.98l4 .8V2.41zm1 11.98l4-.8V1.61l-4 .8v11.98zm-6-.8V1.61l-4 .8v11.98l4-.8z" clip-rule="evenodd"/>
+      </svg>
+    </div>
+
+    <div class="col-md-8 order-md-1 text-center text-md-left pr-md-5">
+      <h1 class="cover-heading mb-3">A personal activity heatmap</h1>
+      <p class="lead mb-4">Hi, my name is Rafael and I do some sports as a hobby. Mostly &#127939 and &#128692 in summer, and &#127938 in winter.</p>
+      <hr class="my-hr">
+      <p class="lead text-muted">I use this small website to host my <span style="color: #fff">personal activity heatmap</span>, based on my Strava data. 
+        I like to code, so naturally I prefer to make this myself rather than paying for <span style="color: #fff">Strava's premium feature</span> &#128513
+      </p>
+      <p class="lead">
+        <a href="{{ url_for('heatmap.heatmap') }}" class="btn btn-primary">View map</a>
+        <a href="https://github.com/rafaelschlatter/strava-heatmap" class="btn btn-outline-light"><span class="fa fa-github"></span> View source</a>
+      </p>
+    </div>
+  </div>
 </div>
+
+<div class="row, text-center">
+  <div>
+    <img class="rounded-circle" src="https://stravastatic.blob.core.windows.net/static/close-up.PNG" alt="Generic placeholder image" width="120" height="120">
+    <h5>Want to create your own heatmap?</h5>
+    <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
+    <p><a class="btn btn-outline-primary" href="#" role="button">View tutorial <span><svg class="bi bi-arrow-right" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+      <path fill-rule="evenodd" d="M10.146 4.646a.5.5 0 01.708 0l3 3a.5.5 0 010 .708l-3 3a.5.5 0 01-.708-.708L12.793 8l-2.647-2.646a.5.5 0 010-.708z" clip-rule="evenodd"/>
+      <path fill-rule="evenodd" d="M2 8a.5.5 0 01.5-.5H13a.5.5 0 010 1H2.5A.5.5 0 012 8z" clip-rule="evenodd"/>
+    </svg></span></a></p>
+  </div><!-- /.col-lg-4 -->
+</div><!-- /.row -->
+
+<br>
 
 <div class="card shadow-sm">
   <div class="card-body">
